fix for sign in page positioning on mobile

--- a/assets/css/unmark_welcome.scss
+++ b/assets/css/unmark_welcome.scss
@@ -49,6 +49,9 @@ body {
 	padding: 0;
 	color: white;
 	@include font-smooth;
+	&#unmark-login {
+		position: static;
+	}
 }
 a {
 	color: inherit;
